[package]
name = "cosmoline"
version = "0.1.0"
authors = ["Ujjwal Sharma <ryzokuken@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
ed25519-dalek = "1.0.1"
dirs = "3.0.1"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
toml = "0.5.8"
json = "0.12.4"
base64 = "0.13.0"
regex = "1.4.5"
async-trait = "0.1.7"

[dependencies.async-std]
version = "1.6.2"
features = ["attributes"]
